# nomail

./: .gitignore  README.md  blacklist.py  conftest.py  email_filter.py  emails.py  environment.py  file_op.py  filtering.py  main.py  output.py  pyproject.toml  pytest.ini  requirements.txt  sanitize.py  session.py
.github/workflows/: test.yml
data/: email_bytes.pkl
mypackage/: imap_ops.py  session.py
src/: action.py  adapter.py  email.py  env.py  environment.py  filtering.py  imap.py  io.py  output.py  sanitize.py  session.py  util.py
src/nomail/: __init__.py  action.py  adapter.py  email.py  email_filter.py  emaillist.py  imap.py  io.py  output.py  sanitize.py  session.py  util.py
tests/: action_test.py  adapter_test.py  conftest.py  descriptor_test.py  email_filter_test.py  email_imap_adapter_test.py  email_test.py  imap_test.py  io_test.py  output_test.py  sanitize_test.py  session_test.py  test_action.py  util_test.py
tests/end_to_end/: system_test.py
tests/unit/: action_test.py  adapter_test.py  descriptor_test.py  email_filter_test.py  email_test.py  imap_test.py  io_test.py  output_test.py  sanitize_test.py  session_test.py  util_test.py
util/: make_test.awk
