[tool.poetry]
name = "nomail"
version = "0.1.1"
description = "lightweight customizable email filter"
authors = ["Aiden Cullo <aidencullo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
