[tool.poetry]
name = "nomail"
version = "0.1.1"
description = "lightweight customizable email filter"
authors = ["Aiden Cullo <aidencullo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
mypy = {version = "^1.9.0", extras = ["V"]}
isort = {version = "^5.13.2", extras = ["V"]}
pytest = "^8.1.1"
pytest-timeout = "^2.3.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
